fixed and improved battery parsing; same functional, but looks fancy.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,6 +70,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Finish this activity" />
+        android:text="Finish this activity"
+        android:visibility="gone" />
 
 </LinearLayout>
