--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,8 +16,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="8dp">
+        android:orientation="horizontal">
 
         <Spinner
             android:id="@+id/sortSpinner"
@@ -45,16 +44,26 @@
         android:id="@+id/searchField"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_marginTop="8dp"
         android:hint="Search by PID or Name" />
 
-    <Switch
-        android:id="@+id/freeze_switch"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginTop="8dp"
-        android:text="Freeze"
-        android:textSize="20sp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Switch
+            android:id="@+id/freeze_switch"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:text="Freeze"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/allUsersBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:text="All users" />
+    </LinearLayout>
 
     <ListView
         android:id="@+id/process_list"
