--- a/app/src/main/res/layout/activity_process_detail.xml
+++ b/app/src/main/res/layout/activity_process_detail.xml
@@ -51,6 +51,14 @@
             android:textSize="18sp"
             android:layout_marginBottom="8dp" />
 
+        <TextView
+            android:id="@+id/user"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="User: N/A"
+            android:textSize="18sp"
+            android:layout_marginBottom="8dp" />
+
         <!-- Uptime -->
         <TextView
             android:id="@+id/uptime"
