--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -10,6 +10,6 @@
         android:title="Батарея"/>
     <item
         android:id="@+id/nav_placeholder"
-        android:icon="@android:drawable/ic_menu_help"
+        android:icon="@android:drawable/ic_menu_camera"
         android:title="Снепшоти"/>
 </menu>
